--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,8 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.ts",
-      "use": "@vercel/node"
+        "src": "index.ts",
+        "use": "@vercel/node",
+        "config": { "includeFiles": ["dist/**"] }
+
     }
   ],
   "routes": [
